--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Build and Push to ACR
         uses: azure/docker-login@v1
         with:
-          login-server: registering.azurecr.io
+          login-server: acr5376.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
  
       - run: |
-          docker build -t acr5376.azurecr.io/employee-basic:latest .
-          docker push acr5376.azurecr.io/employee-basic:latest
+          docker build -t acr5376.azurecr.io/kube_app:1.0 .
+          docker push acr5376.azurecr.io/kube_app:1.0
